fixed photo credit alignment

--- a/css/main.css
+++ b/css/main.css
@@ -87,4 +87,9 @@ text-shadow: 5px 5px 10px black;
     height: 95px;
     line-height: 95px;
   }
+
+  .credit{
+    font-size: 75%;
+    color: black;
+  }
 }
